horizontal scroll fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,9 @@ p{
   * {
     @apply border-border;
   }
+  html,
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 }
